refactor: 💡 component tested and adjusted on D199

--- a/packages/components/Input/NumericKeyboard.html
+++ b/packages/components/Input/NumericKeyboard.html
@@ -8,29 +8,31 @@
     ref:inputNumeric
     {..._inputProps}
     on:focus="_openKeyboard()"
-    on:blur="_closeKeyboard(event)"
   />
 
   {#if isFocused}
-  <div class="keyboard">
-    {#each new Array(9) as _, index}
-    <button class="key" on:click="insertKey(event,index+1)">{index + 1}</button>
-    {/each}
+    <div class="keyboard-wrapper">
+      <div class="keyboard">
+        {#each new Array(9) as _, index}
+        <button class="key" on:click="insertKey(event,index+1)">{index + 1}</button>
+        {/each}
 
-    <button class="key button">
-      <img class="icon" src="{deleteIcon}" on:click="deleteKey()" />
-    </button>
-    <button class="key" on:click="insertKey(event,0)">0</button>
-    <button class="key button">
-      <img class="icon" src="{confirmIcon}" on:click="confirm()" />
-    </button>
-  </div>
+        <button class="key button">
+          <img class="icon" src="{deleteIcon}" on:click="deleteKey()" />
+        </button>
+        <button class="key" on:click="insertKey(event,0)">0</button>
+        <button class="key button">
+          <img class="icon" src="{confirmIcon}" on:click="confirm()" />
+        </button>
+      </div>
+    </div>
   {/if}
 </div>
 
 <script>
   import deleteIcon from './assets/num_delete.png';
   import confirmIcon from './assets/num_ok.png';
+  import Flatted from 'flatted';
 
   export default {
     components: {
@@ -48,25 +50,40 @@
     data() {
       return {
         isFocused: false,
+        clickOnKeyboard: false,
         maxlength: 99,
       };
     },
-    methods: {
-      _forceFocus() {
-        const { inputNumeric } = this.refs;
+    oncreate() {
+      const appScreen = document.querySelector('.mamba-app');
 
-        inputNumeric.focus();
-      },
+      appScreen.addEventListener('click', (e) => {
+
+        const clickClassList = Array.from(e.target.classList);
+
+        const clickOutKeyboard = clickClassList.some((className) => className === 'keyboard-wrapper');
+
+        if (clickOutKeyboard) {
+          this.set({
+            isFocused: false,
+          })
+
+          return;
+        }
+
+      });
+    },
+    methods: {
       insertKey(event, key) {
+
         const { value, maxlength } = this.get();
 
         if (value.length >= maxlength) return;
 
         this.set({
           value: value + key,
+          clickOnKeyboard: true,
         });
-
-        this._forceFocus();
       },
       deleteKey() {
         const { value } = this.get();
@@ -75,13 +92,13 @@
 
         this.set({
           value: value.slice(0, -1),
+          clickOnKeyboard: true,
         });
-
-        this._forceFocus();
       },
       confirm() {
         this.set({
           isFocused: false,
+          clickOnKeyboard: true,
         });
 
         this.fire('submit');
@@ -91,43 +108,38 @@
           isFocused: true,
         });
       },
-      _closeKeyboard(event) {
-        // if click comes from keyboard, keep it open
-        try {
-          const isFromKeyboard = event.relatedTarget.parentElement.classList.contains(
-            'keyboard',
-          );
-
-          if (isFromKeyboard) return;
-        } catch (e) {
-          this.set({
-            isFocused: false,
-          });
-        }
-      },
     },
   };
 </script>
 
 <style>
-  :global(.D199) {
+  :global(.D199, .S920) {
     .numeric-wrapper {
       /* css debug */
       /* border: 1px solid red; */
       position: relative;
     }
 
+    .keyboard-wrapper {
+      position: absolute;
+      height: 347px;
+      width: 100%;
+      /* css debug */
+      /* border: 1px solid red; */
+    }
+
     .keyboard {
       z-index: 999;
       width: 100%;
+      min-width: 100px;
       max-height: 320px;
       box-sizing: border-box;
       /* css debug */
-      /* border: 1px solid red; */
+      /* border-bottom: 1px solid blue; */
       border-top: 1px solid $gray700;
       background-color: $neutral50;
       position: absolute;
-      bottom: -347px;
+      bottom: 0;
 
       * {
         box-sizing: border-box;
@@ -150,7 +162,32 @@
     }
   }
 
-  :global(.S920) {
+  /* :global(.D199, .S920) {
+    :global(.numeric-wrapper .keyboard) {
+
+      .key {
+        max-width: 73px;
+      }
+    }
+  } */
+
+  /* :global(.MP35P) {
+    .keyboard {
+      bottom: -80px;
+
+      .icon {
+        max-width: 20px;
+      }
+
+      .key {
+        width: 100px;
+        font-size: 20px;
+        height: auto;
+      }
+    }
+  } */
+
+  /* :global(.S920) {
     .keyboard {
       bottom: 30px;
       position: absolute;
@@ -168,5 +205,5 @@
         border: 0;
       }
     }
-  }
+  } */
 </style>
