--- a/packages/components/Input/NumericKeyboard.html
+++ b/packages/components/Input/NumericKeyboard.html
@@ -32,7 +32,6 @@
 <script>
   import deleteIcon from './assets/num_delete.png';
   import confirmIcon from './assets/num_ok.png';
-  import Flatted from 'flatted';
 
   export default {
     components: {
@@ -50,7 +49,6 @@
     data() {
       return {
         isFocused: false,
-        clickOnKeyboard: false,
         maxlength: 99,
       };
     },
@@ -82,7 +80,6 @@
 
         this.set({
           value: value + key,
-          clickOnKeyboard: true,
         });
       },
       deleteKey() {
@@ -92,13 +89,11 @@
 
         this.set({
           value: value.slice(0, -1),
-          clickOnKeyboard: true,
         });
       },
       confirm() {
         this.set({
           isFocused: false,
-          clickOnKeyboard: true,
         });
 
         this.fire('submit');
@@ -113,7 +108,7 @@
 </script>
 
 <style>
-  :global(.D199, .S920) {
+  :global(.D199) {
     .numeric-wrapper {
       /* css debug */
       /* border: 1px solid red; */
