add d199 to pos simulation tab

--- a/packages/pos/simulator/view/pos/Card.html
+++ b/packages/pos/simulator/view/pos/Card.html
@@ -162,6 +162,11 @@
       left: 130px;
     }
 
+    &.D199 {
+      top: 610px;
+      left: 35px;
+    }
+
     &:not(:hover):not(.is-inserted) {
       filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
     }
