--- a/packages/pos/simulator/view/pos/POS.html
+++ b/packages/pos/simulator/view/pos/POS.html
@@ -66,6 +66,13 @@
       background-image: url(./assets/D195.png);
     }
 
+    .D199,
+    .shadow-D199 {
+      width: 311px;
+      height: 600px;
+      background-image: url(./assets/D199.png);
+    }
+
     .pos {
       user-select: none;
     }
