--- a/packages/pos/simulator/view/pos/hardware/Keypad/index.html
+++ b/packages/pos/simulator/view/pos/hardware/Keypad/index.html
@@ -10,6 +10,7 @@ import store from '../../store.js';
   import MP35P from './MP35P.html';
   import S920 from './S920.html';
   import D195 from './D195.html';
+  import D199 from './D199.html';
 
   export default {
     store: () => store,
@@ -28,6 +29,10 @@ import store from '../../store.js';
           {
             title: MODELS.D195,
             component: D195,
+          },
+          {
+            title: MODELS.D199,
+            component: D199,
           },
         ],
       };
