--- a/packages/pos/simulator/view/pos/hardware/Screen.html
+++ b/packages/pos/simulator/view/pos/hardware/Screen.html
@@ -121,6 +121,14 @@
       height: 240px;
     }
 
+    :global(.D199 .screen) {
+      top: 70px;
+      left: 28px;
+      border-radius: 2px;
+      width: 252px;
+      height: 442px;
+    }
+
     .content {
       height: 100%;
       flex: 0 1 auto;
