--- a/packages/components/Flatlist/FlatList.html
+++ b/packages/components/Flatlist/FlatList.html
@@ -174,6 +174,7 @@
             index,
             position,
             sectionIndex,
+            renderItemRefs: element.refs.renderItemRef.refs
           };
         }
 
