--- a/packages/pos/simulator/view/pos/hardware/Keypad/D199.html
+++ b/packages/pos/simulator/view/pos/hardware/Keypad/D199.html
@@ -11,7 +11,7 @@
 
   <!-- Column Three -->
   <div class="column">
-    <button class="back" on:mousedown="dispatchKey({ event, keyName: 'enter'})">O</button>
+    <button class="enter" on:mousedown="dispatchKey({ event, keyName: 'enter'})">O</button>
   </div>
 </div>
 
@@ -67,7 +67,7 @@
 <style type="text/postcss">
   .keypad {
     position: absolute;
-    bottom: 45px;
+    bottom: 35px;
     left: 60px;
     display: flex;
 
@@ -80,7 +80,7 @@
     width: 40px;
 
     & + .column {
-      margin-left: 35px;
+      margin-left: 37px;
     }
 
     button + button {
@@ -90,7 +90,7 @@
 
   button {
     width: 100%;
-    height: 40px;
+    height: 35px;
     border: 0;
     appearance: none;
     cursor: pointer;
