fix: 🐛 fix numeric keyboard validation commit mistakes

--- a/packages/components/Input/NumericKeyboard.html
+++ b/packages/components/Input/NumericKeyboard.html
@@ -108,13 +108,12 @@
         });
       },
       _onSubmitValid() {
-        this.fire('submitValid', this._getSubmissionObj());
+        this.fire('submitValid');
       },
       _onSubmitInvalid() {
-        this.fire('submitInvalid', this._getSubmissionObj());
+        this.fire('submitInvalid');
       },
       validate() {
-        /* istanbul ignore next */
         this.refs.inputNumeric.validate();
       },
     },
