fix: 🐛 enter and clear 'hitboxes'

--- a/packages/components/Input/MoneyNumericKeyboard.html
+++ b/packages/components/Input/MoneyNumericKeyboard.html
@@ -22,14 +22,14 @@
           {#if (index < 9)}
             <button class="key" on:click="insertKey(event,index+1)">{index + 1}</button>
           {:elseif index == 9}
-            <button class="key">
-              <img class="icon" src="{deleteIcon}" on:click="deleteKey()" alt="" />
+            <button class="key" on:click="deleteKey()">
+              <img class="icon" src="{deleteIcon}" alt="" />
             </button>
           {:elseif index == 10}
             <button class="key" on:click="insertKey(event,0)">0</button>
           {:elseif index == 11}
-            <button class="key">
-              <img class="icon" src="{confirmIcon}" on:click="confirm()" alt="" />
+            <button class="key" on:click="confirm()">
+              <img class="icon" src="{confirmIcon}" alt="" />
             </button>
           {/if}
       {/each}
