--- a/packages/components/Input/NumericKeyboard.html
+++ b/packages/components/Input/NumericKeyboard.html
@@ -10,14 +10,14 @@
           {#if (index < 9)}
             <button class="key" on:click="insertKey(event,index+1)">{index + 1}</button>
           {:elseif index == 9}
-            <button class="key">
-              <img class="icon" src="{deleteIcon}" on:click="deleteKey()" />
+            <button class="key" on:click="deleteKey()">
+              <img class="icon" src="{deleteIcon}" />
             </button>
           {:elseif index == 10}
             <button class="key" on:click="insertKey(event,0)">0</button>
           {:elseif index == 11}
-            <button class="key">
-              <img class="icon" src="{confirmIcon}" on:click="confirm()" />
+            <button class="key" on:click="confirm()">
+              <img class="icon" src="{confirmIcon}" />
             </button>
           {/if}
       {/each}
