--- a/packages/components/Input/NumericKeyboard.html
+++ b/packages/components/Input/NumericKeyboard.html
@@ -126,11 +126,14 @@
     width: 100%;
 
     &.with-math {
-      max-width: 79%;
+      /* max-width: 79%; */
+      max-width: 100%;
       display: inline-block;
       border-right: 2px solid rgba(0, 0, 0, 0.25);
+
       .key {
-        line-height: 70px;
+        /* line-height: 70px; */
+        line-height: 55px;
       }
     }
   }
@@ -140,8 +143,10 @@
 
     .key {
       width: 100%;
-      line-height: 51px;
-      font-size: 30px;
+      /* line-height: 51px;
+      font-size: 30px; */
+      line-height: 42px;
+      font-size: 25px;
     }
   }
 
