--- a/packages/components/Input/NumericKeyboard.html
+++ b/packages/components/Input/NumericKeyboard.html
@@ -102,14 +102,12 @@
     width: 100%;
     min-width: 80%;
     max-height: 320px;
-
     border-top: 1px solid $gray700;
     background-color: $neutral50;
-
     position: fixed;
     bottom: 0;
-
     box-sizing: border-box;
+    display: flex;
   }
 
   .key {
@@ -123,11 +121,12 @@
   }
 
   .keys {
+    flex: 1;
     width: 100%;
 
     &.with-math {
-      /* max-width: 79%; */
-      max-width: 100%;
+      flex: 0.8;
+      max-width: 80%;
       display: inline-block;
       border-right: 2px solid rgba(0, 0, 0, 0.25);
 
@@ -137,8 +136,10 @@
       }
     }
   }
+
   .keyboard-math {
     max-width: 20%;
+    flex: 0.2;
     display: inline-block;
 
     .key {
