--- a/packages/components/Input/NumericKeyboard.html
+++ b/packages/components/Input/NumericKeyboard.html
@@ -107,7 +107,7 @@
     position: fixed;
     bottom: 0;
     box-sizing: border-box;
-    display: flex;
+    display: inline-block;
   }
 
   .key {
@@ -121,12 +121,10 @@
   }
 
   .keys {
-    flex: 1;
     width: 100%;
 
     &.with-math {
-      flex: 0.8;
-      max-width: 80%;
+      max-width: 78%;
       display: inline-block;
       border-right: 2px solid rgba(0, 0, 0, 0.25);
 
@@ -139,7 +137,6 @@
 
   .keyboard-math {
     max-width: 20%;
-    flex: 0.2;
     display: inline-block;
 
     .key {
