style: 💄 colon of linter

--- a/packages/components/Flatlist/FlatList.html
+++ b/packages/components/Flatlist/FlatList.html
@@ -186,7 +186,7 @@
 
         eventData = {
           ...eventData,
-          renderItemRefs: element.refs.renderItemRef.refs
+          renderItemRefs: element.refs.renderItemRef.refs,
         };
 
         this.set({ selectedIndex: internalIndex });
